# gqrx

./: CMakeLists.txt  gqrx.pro
plugins/: CMakeLists.txt  echoplugin.cpp  echoplugin.h  echoplugin.json
plugins/AFSK1200/: CMakeLists.txt  afsk1200.cpp  afsk1200.h  afsk1200.json  afsk1200.ui
plugins/AFSK1200/afsk1200/: cafsk12.h
plugins/DockPlugin/: CMakeLists.txt  dockplugin.cpp  dockplugin.h  dockplugin.ui
plugins/EchoPlugin/: CMakeLists.txt  echoplugin.cpp  echoplugin.h  echoplugin.json
src/: CMakeLists.txt
src/applications/gqrx/: mainwindow.cpp  mainwindow.h  mainwindow.ui  receiver.cpp  receiver.h
src/dsp/: CMakeLists.txt
src/plugins/: CMakeLists.txt  plugininterface.h
src/qtgui/: CMakeLists.txt  dockplugins.cpp  dockplugins.h  dockplugins.ui  plotter.cpp  plotter.h
